# 21sh

./: #asa  %1  +asss  1  21sh  @1  CMakeLists.txt  Makefile  README.md  ass  author
21sh.dSYM/Contents/Resources/DWARF/: 21sh
Includes/: list.h  sh.h
Sources/: cd.c  check_quotation.c  commands.c  env.c  exit.c  ft.c  ft_2.c  ft_3.c  ft_4.c  ft_split_whitespaces.c  ft_split_with_str.c  ft_strsplit.c  is_not_valid.c  list.c  parser.c  quotation_helper.c  readline.c  redirection.c  redirection_1.c  sh.c  shell.c  unstandart.c  unstandart_2.c
history/: hist.txt
inc/: fshell.h  hash.h  nucleus.h  parser.h  struct.h
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_count.c  ft_count_whtsp_end.c  ft_count_whtsp_start.c  ft_count_words.c  ft_exponentiation.c  ft_free_str.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdelim.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_itoa_base.c  ft_labs.c  ft_list_clear.c  ft_list_foreach.c  ft_list_reverse.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_printf.c  (+54 more)
objs/: check_file.d  ft_distruct.d  ft_error_q.d  ft_signal.d  ft_take_arg.d  g_builtins.d  main.d  shell_lvl.d
objs/builtins/: ft_cd.d  ft_cd_2.d  ft_cd_3.d  ft_echo.d  ft_echo2.d
objs/builtins/allenv/: ft_env.d  global_env.d  main_env.d
objs/errors/: errror_handler.d
objs/exec/: ft_create_file.d  ft_do_pipe.d  ft_fun_fork.d
objs/hash/: hash_error.d  hash_table.d  hash_table_2.d
objs/lexer/: all_bax_and_hist_change.d  change_dol.d  change_hist_exp.d  change_spaces.d  change_str_by_str.d  cr_and_add_tokens.d  dop_funs.d  get_opt_type.d  history_search.d  kill_dop_structure.d  lexer.d  word_sizes.d
objs/nucleus/: del_readline.d  do_add.d  dop_tab_funs.d  find_history.d  ft_add_intput_que.d  ft_add_sumchar.d  ft_arrdel.d  ft_arrnew.d  ft_arrows.d  ft_back_slovo.d  ft_c.d  ft_cheak_quote.d  ft_cleanstr.d  ft_cut.d  ft_cut_copy.d  ft_do_copy.d  ft_do_delch.d  ft_do_leftright.d  ft_dop_history.d  ft_downcursor.d  ft_head_memory.d  ft_memory.d  ft_next_slovo.d  ft_print_tab.d  ft_printf_helper.d  ft_put_n.d  ft_putcut.d  ft_putmemory.d  ft_read_8.d  ft_realloc_buff.d  ft_realloc_tab.d  ft_setcursor.d  ft_start_read.d  ft_strsplit1.d  ft_upcursor.d  input_mode.d  show_history.d  tab.d
objs/parser/: change_tilda.d  dop_parser.d  main_parser.d
src/: check_file.c  ft_distruct.c  ft_error_q.c  ft_signal.c  ft_take_arg.c  g_builtins.c  main.c  shell_lvl.c
src/builtins/: ft_cd.c  ft_cd_2.c  ft_cd_3.c  ft_echo.c  ft_echo2.c
src/builtins/allenv/: ft_env.c  global_env.c  main_env.c
src/errors/: errror_handler.c
src/exec/: ft_create_file.c  ft_do_pipe.c  ft_fun_fork.c
src/hash/: hash_error.c  hash_table.c  hash_table_2.c
src/lexer/: all_bax_and_hist_change.c  change_dol.c  change_hist_exp.c  change_spaces.c  change_str_by_str.c  cr_and_add_tokens.c  dop_funs.c  get_opt_type.c  history_search.c  kill_dop_structure.c  lexer.c  word_sizes.c
src/nucleus/: del_readline.c  do_add.c  dop_tab_funs.c  find_history.c  ft_add_intput_que.c  ft_add_sumchar.c  ft_arrdel.c  ft_arrnew.c  ft_arrows.c  ft_back_slovo.c  ft_c.c  ft_cheak_quote.c  ft_cleanstr.c  ft_cut.c  ft_cut_copy.c  ft_do_copy.c  ft_do_delch.c  ft_do_leftright.c  ft_dop_history.c  ft_downcursor.c  ft_head_memory.c  ft_memory.c  ft_next_slovo.c  ft_print_tab.c  ft_printf_helper.c  ft_put_n.c  ft_putcut.c  ft_putmemory.c  ft_read_8.c  ft_realloc_buff.c  ft_realloc_tab.c  ft_setcursor.c  ft_start_read.c  ft_strsplit1.c  ft_upcursor.c  input_mode.c  show_history.c  tab.c
src/parser/: change_tilda.c  dop_parser.c  main_parser.c
