cmake_minimum_required(VERSION 3.15)
project(alina C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft)

add_executable(alina
        inc/fshell.h
        inc/hash.h
        inc/nucleus.h
        inc/parser.h
        inc/struct.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_count.c
        libft/ft_count_whtsp_end.c
        libft/ft_count_whtsp_start.c
        libft/ft_count_words.c
        libft/ft_exponentiation.c
        libft/ft_free_str.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdelim.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_labs.c
        libft/ft_list_clear.c
        libft/ft_list_foreach.c
        libft/ft_list_reverse.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nbrlen.c
        libft/ft_printf.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_realloc.c
        libft/ft_split_with_str.c
        libft/ft_sqrt.c
        libft/ft_str_is_lowercase.c
        libft/ft_str_is_numeric.c
        libft/ft_str_is_printable.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcmp_start.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_cmp.c
        libft/ft_strjoinch.c
        libft/ft_strjoinch_i.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsep.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_word_size.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/get_next_line_with_sym.c
        libft/libft.h
        src/builtins/allenv/ft_env.c
        src/builtins/allenv/global_env.c
        src/builtins/allenv/main_env.c
        src/builtins/ft_cd.c
        src/builtins/ft_cd_2.c
        src/builtins/ft_cd_3.c
        src/builtins/ft_echo.c
        src/builtins/ft_echo2.c
        src/errors/errror_handler.c
        src/exec/ft_create_file.c
        src/exec/ft_do_pipe.c
        src/exec/ft_fun_fork.c
        src/hash/hash_error.c
        src/hash/hash_table.c
        src/hash/hash_table_2.c
        src/lexer/all_bax_and_hist_change.c
        src/lexer/change_dol.c
        src/lexer/change_hist_exp.c
        src/lexer/change_spaces.c
        src/lexer/change_str_by_str.c
        src/lexer/cr_and_add_tokens.c
        src/lexer/dop_funs.c
        src/lexer/get_opt_type.c
        src/lexer/history_search.c
        src/lexer/kill_dop_structure.c
        src/lexer/lexer.c
        src/lexer/word_sizes.c
        src/nucleus/del_readline.c
        src/nucleus/do_add.c
        src/nucleus/dop_tab_funs.c
        src/nucleus/find_history.c
        src/nucleus/ft_add_intput_que.c
        src/nucleus/ft_add_sumchar.c
        src/nucleus/ft_arrdel.c
        src/nucleus/ft_arrnew.c
        src/nucleus/ft_arrows.c
        src/nucleus/ft_back_slovo.c
        src/nucleus/ft_c.c
        src/nucleus/ft_cheak_quote.c
        src/nucleus/ft_cleanstr.c
        src/nucleus/ft_cut.c
        src/nucleus/ft_cut_copy.c
        src/nucleus/ft_do_copy.c
        src/nucleus/ft_do_delch.c
        src/nucleus/ft_do_leftright.c
        src/nucleus/ft_dop_history.c
        src/nucleus/ft_downcursor.c
        src/nucleus/ft_head_memory.c
        src/nucleus/ft_memory.c
        src/nucleus/ft_next_slovo.c
        src/nucleus/ft_print_tab.c
        src/nucleus/ft_printf_helper.c
        src/nucleus/ft_put_n.c
        src/nucleus/ft_putcut.c
        src/nucleus/ft_putmemory.c
        src/nucleus/ft_read_8.c
        src/nucleus/ft_realloc_buff.c
        src/nucleus/ft_realloc_tab.c
        src/nucleus/ft_setcursor.c
        src/nucleus/ft_start_read.c
        src/nucleus/ft_strsplit1.c
        src/nucleus/ft_upcursor.c
        src/nucleus/input_mode.c
        src/nucleus/show_history.c
        src/nucleus/tab.c
        src/parser/change_tilda.c
        src/parser/dop_parser.c
        src/parser/main_parser.c
        src/check_file.c
        src/ft_distruct.c
        src/ft_error_q.c
        src/ft_signal.c
        src/ft_take_arg.c
        src/g_builtins.c
        src/main.c
        src/shell_lvl.c)
